@@ -132,7 +132,7 @@ classdef prepare_view < BakingTray.gui.child_view
     %Declare function signatures for methods in external files
     methods
         [isSafeToMove,msg]=isSafeToMove(obj,axisToCheckIfMoving)
-        executeJogMotion(obj,event,~)
+        executeJogMotion(obj,src,~)
         positionNextToBakingTrayView(obj)
         takeOneSlice(obj,~,~)
         takeNslices(obj,~,~)
@@ -173,18 +173,18 @@ classdef prepare_view < BakingTray.gui.child_view
         function unLockZ(obj)
             % unlocks the Z jack
             obj.lockZ_checkbox.Value=0;
-            obj.lockZ_callback;
+            obj.lockZ_callback([],[],true);
         end 
 
 
-        function updateJogProperties(obj,event,~)
+        function updateJogProperties(obj,src,~)
             %This callback function ensures that the jog properties are kept up to date when the user
             %edits one of the step size values. 
 
-            thisValue=str2double(event.String);
+            thisValue=str2double(src.String);
 
             % Find which axis (XY or Z) and step size (small or large)
-            jogType = strsplit(event.Tag,'||');
+            jogType = strsplit(src.Tag,'||');
             jogAxis = jogType{1};
             jogSmallOrLarge = jogType{2};
 
@@ -193,14 +193,14 @@ classdef prepare_view < BakingTray.gui.child_view
                     % Check the value we have extracted is numeric (since this the box itself accepts strings)
                     % Reset the value if it was not a number
                     if isnan(thisValue) || thisValue==0
-                        set(event, 'String', obj.xyJogSizes.(jogSmallOrLarge) );
+                        set(src, 'String', obj.xyJogSizes.(jogSmallOrLarge) );
                     else
                         obj.xyJogSizes.(jogSmallOrLarge)=thisValue;
                     end
                 case 'Z'
                     % Reset the value if it was not a number
                     if isnan(thisValue) || thisValue==0
-                        set(event, 'String', obj.zJogSizes.(jogSmallOrLarge) )
+                        set(src, 'String', obj.zJogSizes.(jogSmallOrLarge) )
                     else
                         obj.zJogSizes.(jogSmallOrLarge)=thisValue;
                     end
@@ -313,7 +313,7 @@ classdef prepare_view < BakingTray.gui.child_view
             obj.editBox.cutSize_X.String = sprintf('%0.2f', round(CS,2));
         end %updateCuttingConfigurationText
 
-        function executeAbsoluteMotion(obj,event,~)
+        function executeAbsoluteMotion(obj,src,~)
             % BakingTray.gui.view.executeAbsoluteMotion
             %
             % This callback is run when the user edits one of the absolute
@@ -322,7 +322,7 @@ classdef prepare_view < BakingTray.gui.child_view
             % itself. 
             
              
-            motionAxisString=event.Tag;
+            motionAxisString=src.Tag;
             axisToMove=obj.model.(motionAxisString);
             if ~obj.isSafeToMove(axisToMove)
                 return
@@ -337,9 +337,9 @@ classdef prepare_view < BakingTray.gui.child_view
             end
 
             %Strip problematic non-numeric characters
-            moveString=event.String;
+            moveString=src.String;
             moveString=regexprep(moveString,'-+','-'); %Don't allow multiple minus signs
-            event.String=moveString;
+            src.String=moveString;
             moveTo=str2double(moveString);
             %if it's not a number, then do nothing
             if isnan(moveTo)
@@ -353,7 +353,7 @@ classdef prepare_view < BakingTray.gui.child_view
             end
 
             if success==false
-                event.ForegroundColor='r'; %The number will briefly flash red
+                src.ForegroundColor='r'; %The number will briefly flash red
             end
 
             %Now read back the axis position. This will correct cases where, say, the axis did not move but the 
@@ -361,8 +361,8 @@ classdef prepare_view < BakingTray.gui.child_view
             pause(0.1)
             pos=axisToMove.axisPosition;
             if success==false %if there was no motion the box won't update so we have to force it=
-                event.String=sprintf('%0.3f',round(pos,3));
-                event.ForegroundColor='k';
+                src.String=sprintf('%0.3f',round(pos,3));
+                src.ForegroundColor='k';
             end
             if strcmp(obj.prepareViewUpdateTimer.Running, 'off')
                 start(obj.prepareViewUpdateTimer)
@@ -375,7 +375,28 @@ classdef prepare_view < BakingTray.gui.child_view
             obj.updateCuttingConfigurationText;
         end % setCuttingPos_callback
 
-        function lockZ_callback(obj,~,~)
+        function lockZ_callback(obj,~,~,byPassQuestDlg)
+            % Run every time the lock-z checkbox changes state.
+            % 
+            %    function lockZ_callback(obj,~,~,byPassQuestDlg)
+
+            if nargin<4
+                byPassQuestDlg = false;
+            end
+
+            % Query whether the user really wants to unlock
+            if byPassQuestDlg==false && obj.lockZ_checkbox.Value == 0
+                obj.lockZ_checkbox.Value=1;
+                q_reply = questdlg(['You must not use the sample z-stage to focus since moving ', ...
+                    'the z-stage will alter cutting thickness. Are you sure you know what you ', ...
+                    'are doing and want to unlock Z?'],...
+                    'Are you sure?','Yes','No','No');
+
+                if strcmp(q_reply,'Yes')
+                    obj.lockZ_checkbox.Value=0;
+                end
+            end
+
             % Runs when the checkbox is checked
             if obj.lockZ_checkbox.Value == 1
                 % Stage is locked
